--- a/src/components/Pages/User/User.css
+++ b/src/components/Pages/User/User.css
@@ -71,3 +71,20 @@
       text-align: right;
     }
   }
+  .form__input {
+    
+    color: #333;
+    font-size: 1.2rem;
+    margin: 17px auto;
+    padding: 0.5rem 2rem;
+    border-radius: 0.2rem;
+    background-color: rgb(255, 255, 255);
+    border: none;
+    width: 70%;
+    display: block;
+    border-bottom: 0.3rem solid transparent;
+    transition: all 0.3s;
+    outline: none;
+  }
+  
+  
